# cline-desktop

./: .gitignore  .gitmodules  ARCHITECTURE.md  README.md  help.md  help_fixed.md  help_standalone.md  injected.md  package-lock.json  package.json  test-fs-api.html  test-node-sidecar.html  todo.md  updateApiConfigurationProto.md
.qoder/rules/: own.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hostbridge.rs  lib.rs  main.rs
src-tauri/src/grpc_client/: README.md  connection.rs  examples.rs  mod.rs  tests.rs  tests_performance.rs  tests_utils.rs  types.rs  utils.rs
src-tauri/src/grpc_client/services/: account_service.rs  mcp_service.rs  mod.rs  models_service.rs  state_service.rs  tests_ui_service.rs  ui_service.rs
