[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }
tonic-build = "0.10"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-log = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
# gRPC 相关依赖
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"
# 用于健康检查
tonic-health = "0.10"
hostname = "0.3"
# 用于处理 Ctrl+C 信号
ctrlc = "3.4"
# 用于 HTTP 客户端请求
reqwest = { version = "0.11", features = ["json"] }
# 用于全局变量
lazy_static = "1.4"
